tests/paczka1/fuzzy1/20635212.err
Error in line 2: 2MuEkvx A388 28,3
Error in line 4: A921 A921 10,4
Error in line 10: bluufWgGY A388 81,0
Error in line 22: 2MuEkvx A388 96,2
Error in line 32: ITK26nYRvm2 A921 99,0
Error in line 29: 46tNQEDtCCL A921 38,8
Error in line 37: ITK26nYRvm2 A388 106,30
